--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -6,9 +6,17 @@
     "partnership": "الشراكة",
     "aboutUs": "من نحن",
     "contactUs": "اتصل بنا",
-    "signIn": "تسجيل الدخول"
+    "signIn": "تسجيل الدخول",
+    "myWallet": "محفظتي",
+    "myEsim": "شريحتي الإلكترونية",
+    "ordersHistory": "سجل الطلبات",
+    "accountInfo": "معلومات الحساب",
+    "deleteAccount": "حذف الحساب",
+    "logout": "تسجيل الخروج"
   },
   "auth": {
+    "sms": "رسالة",
+    "phone": "رقم الهاتف",
     "signInTitle": "تسجيل الدخول إلى حسابك",
     "newUser": "مستخدم جديد؟",
     "createAccount": "إنشاء حساب",
@@ -21,6 +29,335 @@
     "loginSuccess": "تم تسجيل الدخول بنجاح!",
     "orContinueWith": "أو المتابعة باستخدام",
     "signInWithGoogle": "تسجيل الدخول باستخدام Google",
-    "signInWithFacebook": "تسجيل الدخول باستخدام Facebook"
+    "signInWithFacebook": "تسجيل الدخول باستخدام Facebook",
+    "verifyEmail": "يرجى التحقق من {{verifyBy}}!",
+    "syrialtelDcbMessage": "أنت على وشك الدفع باستخدام SyriaCash. تم إرسال رمز التحقق عن طريق {{verifyBy}}",
+    "mtnDcbMessage": "أنت على وشك الدفع باستخدام رصيد MTN الخاص بك. تم إرسال رمز التحقق عن طريق {{verifyBy}}",
+    "verificationCodeSent": "لقد شارفنا على الانتهاء! تم إرسال رمز التحقق عن طريق {{verifyBy}}",
+    "verify": "تحقق",
+    "verifying": "جاري التحقق...",
+    "didntReceiveCode": "لم يصلك الرمز؟",
+    "resendNow": "أعد الإرسال الآن",
+    "didnt_receive_email": "لم يصلك البريد الإلكتروني؟",
+    "welcomeBackEnterEmail": "مرحبًا بعودتك! يرجى إدخال {{loginType}}.",
+    "confirmationRequired": "التأكيد مطلوب",
+    "failedToVerifyOtp": "فشل في التحقق من رمز التحقق",
+    "resendCode": "إعادة إرسال الرمز",
+    "signInSent": "تم الإرسال {{method}}",
+    "signInEmailWithInstructionsSent": "تم إرسال {{method}} تسجيل الدخول مع تعليمات إضافية",
+    "checkEmailToCompleteSignIn": "تحقق من بريدك الإلكتروني لإكمال تسجيل الدخول",
+    "phoneRequired": "رقم الهاتف مطلوب",
+    "invalidPhone": "رقم الهاتف غير صالح",
+    "selectVerificationMethod": "يرجى اختيار طريقة التحقق",
+    "otpMustBeNumber": "يجب أن يكون رمز التحقق رقماً",
+    "otpRequired": "رمز التحقق مطلوب",
+    "otpDigitLength": "يجب أن يكون كل رقم في رمز التحقق مكونًا من حرف واحد فقط",
+    "otpSixDigits": "يجب أن يحتوي رمز التحقق على 6 أرقام تمامًا",
+    "signInInstructionsSent": "تم إرسال <ltr>{{verifyBy}}</ltr> لتسجيل الدخول إلى <ltr>{{contact}}</ltr>. تحقق من <ltr>{{verifyBy}}</ltr> وأدخل رمز التحقق في الشاشة التالية لإكمال تسجيل الدخول.",
+    "phoneNumberRequired": "رقم الهاتف مطلوب",
+    "verifyByChannel": "التحقق عبر {{channel}}",
+    "invalidPhoneNumber": "رقم الهاتف غير صالح",
+    "confirmValidAndNoTypos": "أؤكد أن {{login_type}} أعلاه صحيح ولا يحتوي على أي أخطاء.",
+    "andIAcceptThe": "وأنا أوافق على",
+    "andIUnderstandProductWorksWithESIM": "وأفهم أن المنتج يعمل فقط مع أجهزة eSIM المتوافقة وغير المقيدة بالشبكة.",
+    "emailMustBeValid": "يجب أن يكون البريد الإلكتروني بريدًا إلكترونيًا صالحًا",
+    "phoneNumber": "رقم الهاتف"
+  },
+  "common": {
+    "hooray": "رائع!",
+    "notAvailable": "غير متوفر",
+    "pageNotFound": "الصفحة غير موجودة",
+    "pageNotExistMessage": "عذرًا، الصفحة التي تبحث عنها غير موجودة."
+  },
+  "account": {
+    "delete_account": "حذف الحساب",
+    "delete_account_paragraph": "سيؤدي هذا إلى حذف حسابك من تطبيق Monty eSIM. لا يزال بإمكانك الوصول إلى eSIM التي اشتريتها والملف الشخصي المُفعل من خلال هاتفك.",
+    "delete_account_confirmation": "يرجى إدخال بريدك الإلكتروني لتأكيد حذف الحساب"
+  },
+  "notifications": {
+    "title": "الإشعارات",
+    "failedToLoadNotifications": "فشل في تحميل الإشعارات",
+    "noNotificationsYet": "لا توجد إشعارات حتى الآن",
+    "failedToMarkAsUnread": "فشل في التحديد كغير مقروء",
+    "noNotificationsFound": "لم يتم العثور على إشعارات"
+  },
+  "noDataFound": {
+    "no_valid_iccid": "لم يتم تقديم ICCID. يرجى تقديم ICCID صالح.",
+    "no_data_matching_iccid": "لا توجد بيانات متوفرة لـ ICCID المُقدم.",
+    "no_active_plans": "لا توجد باقات نشطة.",
+    "no_expired_plans": "لا توجد باقات منتهية."
+  },
+  "label": {
+    "purchase_date": "تاريخ الشراء",
+    "iccid number": "رقم ICCID",
+    "order_id": "رقم الطلب",
+    "bundle_name": "اسم الباقة",
+    "link": "الرابط",
+    "enterName": "أدخل الاسم"
+  },
+  "bundle": {
+    "bundle_existence_title": "لقد اشتريت eSIM من قبل!",
+    "bundle_existence_text": "إذا كانت الشريحة لا تزال على جهازك وتستخدمها من هنا، سيكون من الأسرع تعبئتها!"
+  },
+  "btn": {
+    "buy_new_esim": "شراء شريحة eSIM جديدة",
+    "top_up_existing_esim": "تعبئة الشريحة الحالية",
+    "save": "حفظ",
+    "copy_link": "نسخ الرابط",
+    "user_guide": "دليل المستخدم",
+    "signin_signup": "تسجيل الدخول / التسجيل",
+    "resend_now": "أعد الإرسال الآن",
+    "view_receipt": "عرض الإيصال",
+    "download": "تحميل",
+    "view_more": "عرض المزيد",
+    "delete": "حذف",
+    "add_top_up": "إضافة تعبئة",
+    "consumption": "الاستهلاك",
+    "view_qr_code": "عرض رمز QR",
+    "shop_now": "تسوق الآن",
+    "learn_more": "اعرف المزيد",
+    "view_all_plans": "عرض جميع الباقات",
+    "buyNow": "اشترِ الآن",
+    "checkingBundle": "جارٍ التحقق من الباقة...",
+    "countries": "البلدان",
+    "regions": "المناطق",
+    "global": "عالمي",
+    "viewLess": "عرض أقل",
+    "viewAllCountries": "عرض جميع البلدان",
+    "copiedSuccessfully": "تم النسخ بنجاح",
+    "confirm": "تأكيد",
+    "sending": "جارٍ الإرسال...",
+    "sendMessage": "إرسال الرسالة",
+    "payNow": "ادفع الآن",
+    "cancel": "إلغاء",
+    "savingChanges": "جارٍ حفظ التغييرات...",
+    "saveChanges": "حفظ التغييرات"
+  },
+  "orders": {
+    "plan_history": "سجل الباقات",
+    "edit_name": "تعديل الاسم",
+    "top_up_plan": "تعبئة الباقة",
+    "top_up_plan_text": "قم بتعبئة باقتك الآن واستفد من البيانات والتغطية",
+    "consumption_details": "تفاصيل الاستهلاك",
+    "consumption_details_text": "هذا هو معدل استهلاكك حتى الآن",
+    "share_your_bundle_text": "شارك باقتك مع الأصدقاء أو العائلة أو أي شخص قد يستفيد منها",
+    "share_your_bundle": "شارك باقتك",
+    "qrcode_detail": "تفاصيل رمز QR",
+    "payment_successfull": "تمت عملية الدفع بنجاح!",
+    "please_wait_to_fetch_order": "يرجى الانتظار أثناء جلب تفاصيل الطلب",
+    "qrcode_sent_text": "تم إرسال رمز QR إلى بريدك الإلكتروني. يمكنك مسحه هنا ومشاركته مع أصدقائك.",
+    "orders_history": "سجل الطلبات",
+    "order_id": "رقم الطلب",
+    "order_status": "حالة الطلب",
+    "payment_details": "تفاصيل الدفع",
+    "smdpAddress": "عنوان",
+    "activateCode": "كود التفعيل",
+    "failedToLoad": "فشل في تحميل بيانات الطلب.",
+    "pleaseSignIn": "يرجى تسجيل الدخول لمزيد من التفاصيل",
+    "ordered": "تم الطلب",
+    "Amount": "المبلغ",
+    "Type": "النوع",
+    "Validity": "الصلاحية",
+    "Data": "البيانات",
+    "Order ID": "رقم الطلب",
+    "Purchase Date": "تاريخ الشراء",
+    "dataUsage": "المستهلكة",
+    "failedToLoadEsimConsumption": "فشل في تحميل استهلاك الشريحة الإلكترونية",
+    "qty": "الكمية",
+    "product": "المنتج",
+    "unitPrice": "سعر الوحدة",
+    "amount": "المبلغ",
+    "totalPrice": "السعر الإجمالي:",
+    "finalPrice": "السعر النهائي:",
+    "failedToLoadOrderReceiptDetails": "فشل في تحميل تفاصيل إيصال الطلب",
+    "failedToLoadOrders": "فشل في تحميل الطلبات",
+    "noOrdersYet": "لا توجد طلبات بعد",
+    "companyName": "اسم الشركة",
+    "address": "العنوان",
+    "email": "البريد الإلكتروني",
+    "orderId": "رقم الطلب",
+    "orderType": "نوع الطلب",
+    "Primary Bundle": "الباقة الأساسية",
+    "TopUp Bundle": "باقة الشحن",
+    "labelRequired": "حقل التسمية مطلوب"
+  },
+  "esim": {
+    "title": "شريحتي الإلكترونية",
+    "current_plans": "الباقات الحالية",
+    "expired_plans": "الباقات المنتهية",
+    "esim_detail": "تفاصيل الشريحة"
+  },
+  "userGuide": {
+    "goto_settings": "اذهب إلى الإعدادات",
+    "select_mobile_settings": "اختر خدمات الهاتف المحمول",
+    "select_add_esim": "اختر إضافة شريحة eSIM",
+    "select_use_qr_code": "اختر استخدام رمز QR",
+    "place_qr_code": "ضع رمز QR الذي تلقيته داخل إطار كاميرا الهاتف لمسحه",
+    "go_mobile_data": "ارجع إلى خدمات الهاتف المحمول واختر خيارات بيانات الهاتف",
+    "toggle_data_roaming": "اختر زر التبديل بجوار تجوال البيانات لتفعيل أو إيقاف الوظيفة",
+    "good_to_go": "أنت جاهز!",
+    "slide_two_fingers": "اسحب إصبعين لأسفل من أعلى الشاشة",
+    "select_settings_icon": "اختر رمز الإعدادات",
+    "select_connections": "اختر الاتصالات",
+    "select_sim_manager": "اختر مدير الشرائح",
+    "go_back_connections": "ارجع إلى الاتصالات واختر الشبكات المحمولة",
+    "select_qr_code": "اختر رمز QR",
+    "toggle_roaming": "تبديل التجوال"
+  },
+  "plans": {
+    "restrictedCountriesSelection": "يمكنك اختيار 3 دول فقط.",
+    "chooseYourPlan": "اختر باقتك",
+    "please": "يرجى",
+    "dial": "الاتصال بـ",
+    "checkCompatibility": "للتحقق من توافق الجهاز، إذا وُجد EID فـ",
+    "compatibleDevice": "جهازك متوافق",
+    "noPlansAvailable": "لا توجد باقات متاحة حالياً. يرجى المحاولة لاحقاً.",
+    "atSea": "في البحر",
+    "onLand": "على اليابسة",
+    "searchByCountry": "البحث حسب البلد",
+    "Plan Started": "بدأت الخطة",
+    "Plan Not Started": "لم تبدأ الخطة"
+  },
+  "bundles": {
+    "validity": "الصلاحية",
+    "noBundlesAvailable": "حالياً، لا توجد أي باقات متاحة",
+    "noTopupsAvailable": "حالياً، لا توجد أي شحنات متاحة",
+    "availableIn": "متوفر في",
+    "supportedCountries": "الدول المدعومة",
+    "bundleIsntSupportedCountry": "هذه الباقة غير مدعومة في أي دولة.",
+    "additionalInfo": "معلومات إضافية",
+    "planType": "نوع الباقة",
+    "activationPolicy": "سياسة التفعيل",
+    "compatibility": "التوافق",
+    "findOut": "اكتشف ما إذا كان جهازك يدعم eSIM من خلال الاتصال بـ <0>{{code}}</0> والبحث عن <1>{{term}}</1>.",
+    "failedToLoadBundles": "فشل في تحميل الباقات",
+    "duration": "{{count}} {{unit}}",
+    "unit": {
+      "day": "يوم",
+      "day_plural": "أيام",
+      "month": "شهر",
+      "month_plural": "أشهر",
+      "year": "سنة",
+      "year_plural": "سنوات"
+    }
+  },
+  "checkout": {
+    "aliasEmailNotAllowed": "عناوين البريد الإلكتروني التي تحتوي على '+' غير مسموح بها",
+    "confirmationRequired": "مطلوب التأكيد",
+    "emailRequired": "البريد الإلكتروني حقل مطلوب",
+    "failedToSendMessage": "فشل في إرسال الرسالة",
+    "goBack": "العودة",
+    "email": "البريد الإلكتروني",
+    "enterEmail": "أدخل البريد الإلكتروني",
+    "emailConfirmationMessage": "أؤكد أن البريد الإلكتروني أعلاه صالح ولا يحتوي على أي أخطاء مطبعية.",
+    "acceptPrefix": "وأوافق على",
+    "terms": "الشروط والأحكام",
+    "esimCompatibilityNote": "وأفهم أن المنتج يعمل فقط مع الأجهزة المتوافقة مع eSIM والمفتوحة على جميع الشبكات.",
+    "summary": "ملخص",
+    "bundleName": "اسم الباقة",
+    "subtotal": "المجموع الفرعي",
+    "estimatedTax": "الضريبة المقدرة",
+    "total": "الإجمالي"
+  },
+  "howItWorks": {
+    "easyAndFast": "سهل وسريع",
+    "howToSetUpMontyEsim": "كيفية إعداد شريحتك الإلكترونية",
+    "step": "الخطوة",
+    "of": "من"
+  },
+  "aboutUs": {
+    "stayConnected": "ابقَ متصلاً",
+    "failedToLoadAboutUsData": "فشل في تحميل بيانات من نحن",
+    "noContentAvailable": "لا يوجد محتوى متاح في الوقت الحالي",
+    "About us": "من نحن"
+  },
+  "contactUs": {
+    "messageRequired": "الرسالة حقل مطلوب",
+    "melIsTesting": "ميل يختبر",
+    "messageSentSuccessfully": "تم إرسال رسالتك بنجاح!",
+    "failedToSendMessage": "فشل في إرسال الرسالة",
+    "contactUs": "اتصل بنا",
+    "needSomeHelp": "هل تحتاج إلى مساعدة",
+    "contactInfo": "لجميع الاستفسارات، يرجى مراسلتنا عبر النموذج أدناه. فريقنا متواجد لخدمتكم على مدار الساعة طوال أيام الأسبوع!",
+    "message": "رسالة",
+    "typeYourMessage": "اكتب رسالتك",
+    "frequentlyAskedQuestions": "الأسئلة المتكررة",
+    "subscribeDescription": "اشترك لتتعرف على ميزات المنتجات الجديدة، وأحدث التقنيات، والحلول، والتحديثات.",
+    "noFaqsMessage": "لم نتمكن من العثور على أي أسئلة شائعة في الوقت الحالي. إذا كانت لديك أسئلة، لا تتردد في الاتصال بنا!"
+  },
+  "footer": {
+    "contactUs": "اتصل بنا",
+    "termsAndConditions": "الشروط والأحكام",
+    "privacyPolicy": "سياسة الخصوصية",
+    "office": "المكتب",
+    "email": "البريد الإلكتروني",
+    "phone": "الهاتف"
+  },
+  "stripe": {
+    "failedToLoadPaymentInput": "فشل في تحميل معلومات الدفع",
+    "paymentProcessingError": "لا يمكن معالجة الدفع. يرجى التواصل مع دعم تقنية المعلومات.",
+    "paymentConfirmationFailed": "فشل في تأكيد الدفع",
+    "paymentMethod": "طريقة الدفع",
+    "failedToLoadPaymentInputs": "فشل في تحميل مدخلات الدفع. يرجى المحاولة مرة أخرى لاحقًا"
+  },
+  "planType": {
+    "Data only": "بيانات فقط"
+  },
+  "validity": {
+    "Day": "يوم",
+    "day": "يوم",
+    "Week": "أسبوع",
+    "week": "أسبوع",
+    "Month": "شهر",
+    "month": "شهر",
+    "Year": "سنة",
+    "year": "سنة"
+  },
+  "activity_policy": "تبدأ فترة الصلاحية عند اتصال الشريحة الإلكترونية بأي من الشبكات المدعومة.",
+  "terms": {
+    "failedToLoadTermsData": "فشل في تحميل بيانات الشروط والأحكام",
+    "termsAndConditions": "الشروط والأحكام"
+  },
+  "errors": {
+    "maxCharacter": "يجب أن لا يحتوي {{field}} على أكثر من {{character}} حرفًا"
+  },
+  "profile": {
+    "infoUpdatedSuccessfully": "تم تحديث المعلومات بنجاح",
+    "failedToUpdateUserInfo": "فشل في تحديث معلومات المستخدم",
+    "accountInformation": "معلومات الحساب",
+    "firstName": "الاسم الأول",
+    "enterFirstName": "أدخل الاسم الأول",
+    "lastName": "اسم العائلة",
+    "enterLastName": "أدخل اسم العائلة",
+    "phoneNumber": "رقم الهاتف",
+    "defaultCurrency": "العملة الافتراضية",
+    "defaultCurrencyFallback": "إذا لم يتم تحديد عملة افتراضية، سيستخدم النظام {{system_currency}} كعملة افتراضية.",
+    "selectDefaultCurrency": "اختر العملة الافتراضية",
+    "receiveUpdatesByEmail": "تلقّى التحديثات حول خدماتنا، الأخبار، والعروض عبر البريد الإلكتروني",
+    "errors": {
+      "onlyLettersAllowed": "يسمح فقط بالحروف",
+      "firstNameRequired": "الاسم الأول مطلوب",
+      "lastNameRequired": "اسم العائلة مطلوب",
+      "invalidPhone": "رقم الهاتف غير صالح",
+      "phoneRequired": "رقم الهاتف مطلوب",
+      "emailRequired": "البريد الإلكتروني مطلوب",
+      "emailInvalid": "يجب أن يكون بريدًا إلكترونيًا صالحًا"
+    }
+  },
+  "status": {
+    "success": "ناجح",
+    "pending": "قيد الانتظار",
+    "failed": "فشل",
+    "failure": "فشل"
+  },
+  "payment": {
+    "paymentTypeNotAvailable": "نوع الدفع هذا غير متوفر الآن",
+    "failedToLoadPaymentInput": "فشل في تحميل مدخلات الدفع",
+    "paymentMethod": "طريقة الدفع"
+  },
+  "privacy": {
+    "failedToLoadPrivacyPolicyData": "فشل في تحميل بيانات سياسة الخصوصية",
+    "noContentAvailable": "لا يوجد محتوى متاح في هذه اللحظة",
+    "Privacy Policy": "سياسة الخصوصية"
   }
 }
