update translation content

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -175,9 +175,9 @@
     "verifyEmail": "Please verify your {{verifyBy}}!",
     "sms": "SMS",
     "whatsapp": "Whatsapp",
-    "dcbMessage": "You are about to pay using your phone number. A verification code was sent to by {{verifyBy}}",
-    "ChillDcbMessage": "You are about to pay using your Chill SIM balance. A verification code was sent to by {{verifyBy}}",
-    "verificationCodeSent": "You're almost there! A verification code was sent to by {{verifyBy}}",
+    "dcbMessage": "You are about to pay using your phone number. A verification code was sent to you by {{verifyBy}}",
+    "ChillDcbMessage": "You are about to pay using your Chill SIM balance. A verification code was sent to you by {{verifyBy}}",
+    "verificationCodeSent": "You're almost there! A verification code was sent to you by {{verifyBy}}",
     "verify": "Verify",
     "verifying": "Verifying...",
     "didntReceiveCode": "Didn't receive a code?",
