intagrated tax and fee

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -261,7 +261,9 @@
     "bundleName": "Bundle Name",
     "subtotal": "Subtotal",
     "estimatedTax": "Estimated Tax",
-    "total": "Total"
+    "total": "Total",
+    "tax": "Tax",
+    "fee": "Stripe Fee"
   },
   "howItWorks": {
     "easyAndFast": "Easy and fast",
