--- a/public/locales/ro/translation.json
+++ b/public/locales/ro/translation.json
@@ -264,7 +264,7 @@
     "estimatedTax": "Taxă estimată",
     "total": "Total",
     "tax": "TVA",
-    "fee": "Taxă Stripe"
+    "fee": "Cost Procesare"
   },
   "howItWorks": {
     "easyAndFast": "Ușor și rapid",
