--- a/public/locales/ro/translation.json
+++ b/public/locales/ro/translation.json
@@ -201,7 +201,7 @@
     "phoneNumberRequired": "Numărul de telefon este un câmp obligatoriu",
     "verifyByChannel": "Verifică prin {{channel}}",
     "invalidPhoneNumber": "Număr de telefon invalid",
-    "confirmValidAndNoTypos": "I confirm that the above {{login_type}} is valid and does not contain any typos.",
+    "confirmValidAndNoTypos": "Confirm că {{login_type}}-ul de mai sus este valid și nu conține greșeli de tipar.",
     "andIAcceptThe": "Și accept",
     "andIUnderstandProductWorksWithESIM": "și înțeleg că produsul funcționează doar cu dispozitive compatibile cu eSIM și deblocate de către operator.",
     "emailMustBeValid": "Adresa de e-mail trebuie să fie una validă",
@@ -234,7 +234,7 @@
     "additionalInfo": "Informații suplimentare",
     "planType": "Categoria planului",
     "activationPolicy": "Politica de activare",
-    "compatibility": "Compatibilitate",
+    "compatibility": "Compatibilitatea",
     "findOut": "Find out if your device supports eSIM by dialing <0>{{code}}</0> and looking for <1>{{term}}</1>.",
     "failedToLoadBundles": "Nu s-au putut încărca pachetele",
     "duration": "{{count}} {{unit}}",
