added billing form

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -264,7 +264,23 @@
     "estimatedTax": "Estimated Tax",
     "total": "Total",
     "tax": "Tax",
-    "fee": "Processing Fee"
+    "fee": "Processing Fee",
+    "billingInformation": "Billing information",
+    "billingType": "Billing type",
+    "individual": "Individual",
+    "business": "Business",
+    "companyName": "Company name",
+    "vatCode": "VAT code",
+    "tradeRegistry": "Romanian Trade Registry number",
+    "lastName": "Last name",
+    "firstName": "First name",
+    "country": "Country",
+    "selectCountry": "-- Select country --",
+    "city": "City",
+    "selectCity": "-- Select city --",
+    "state": "State",
+    "phone": "Contact phone number",
+    "billingAddress": "Billing address"
   },
   "howItWorks": {
     "easyAndFast": "Easy and fast",
