--- a/public/locales/ro/translation.json
+++ b/public/locales/ro/translation.json
@@ -264,7 +264,23 @@
     "estimatedTax": "Taxă estimată",
     "total": "Total",
     "tax": "TVA",
-    "fee": "Cost Procesare"
+    "fee": "Cost Procesare",
+    "billingInformation": "Informații de facturare",
+    "billingType": "Tip de facturare",
+    "individual": "Persoana fizică",
+    "business": "Persoana juridică",
+    "companyName": "Numele companiei",
+    "vatCode": "CUI",
+    "tradeRegistry": "Nr. Registrul Comerțului",
+    "lastName": "Nume de familie",
+    "firstName": "Prenume",
+    "country": "Țară",
+    "selectCountry": "-- Selectați țara --",
+    "city": "Oraș",
+    "selectCity": "-- Selectați orașul --",
+    "state": "Județ",
+    "phone": "Număr de telefon",
+    "billingAddress": "Adresă de facturare"
   },
   "howItWorks": {
     "easyAndFast": "Ușor și rapid",
